Reverted back to grid layout, fixed conversation div overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -366,7 +366,9 @@ template {
 }
 
 .conversation {
-  background-color: white;
+  height: 90vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .chatWindow {
@@ -376,8 +378,8 @@ template {
 }
 
 .wrapper {
-  display: flex;
-  /* grid-template-columns: 15% 35% 35% 15%; */
+  display: grid;
+  grid-template-columns: 15% 35% 35% 15%;
 }
 
 .docNavigation {
@@ -454,10 +456,4 @@ template {
 
 .userInfo {
   background-color: green;
-}
-
-
-.column {
-  border-right: gray 1px solid;
-  border-left: gray 1px solid;
 }
